[tool.poetry]
name = "repl_python3_beta_Number-Guessing"
version = "0.1.0"
description = ""
authors = ["ZMGG <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
termcolor = "^1.1.0"
colorama = "^0.4.4"
simple-colors = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
